--- a/app/src/main/res/layout/activity_in__corso.xml
+++ b/app/src/main/res/layout/activity_in__corso.xml
@@ -6,4 +6,21 @@
     android:layout_height="match_parent"
     tools:context="polastri.alessandro.agendapersonale.In_Corso">
 
+    <Button
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        android:onClick="cambia"
+        android:text="@string/add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/testo"
+        android:layout_width="277dp"
+        android:layout_height="112dp"
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="33dp" />
 </android.support.constraint.ConstraintLayout>
