--- a/app/src/main/res/layout/activity_attivita_in_corso.xml
+++ b/app/src/main/res/layout/activity_attivita_in_corso.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="polastri.alessandro.agendapersonale.AttivitaInCorso">
+    tools:context="polastri.alessandro.agendapersonale.Impegni">
 
     <ListView
         android:id="@+id/lista"
