--- a/app/src/main/res/layout/activity_rubrica.xml
+++ b/app/src/main/res/layout/activity_rubrica.xml
@@ -9,7 +9,7 @@
     <ListView
         android:id="@+id/lista"
         android:layout_width="395dp"
-        android:layout_height="521dp"
+        android:layout_height="506dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -25,7 +25,9 @@
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="8dp"
+        android:background="@color/colorPrimary"
         android:text="@string/aggiungi"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lista" />
