Aggiunta ricerca di contatti per tipo nell'activity rubrica. Aggiunti i package rubrica e attività per un migliore orientamento tra i file. Alcune modifiche grafiche(XML).

--- a/app/src/main/res/layout/activity_attivita_in_corso.xml
+++ b/app/src/main/res/layout/activity_attivita_in_corso.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="polastri.alessandro.agendapersonale.Impegni">
+    tools:context="polastri.alessandro.agendapersonale.polastri.alessandro.agendapersonale.attivita.Impegni">
 
     <ListView
         android:id="@+id/lista"
