--- a/app/src/main/res/layout/layout_dialog_rubrica.xml
+++ b/app/src/main/res/layout/layout_dialog_rubrica.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="polastri.alessandro.agendapersonale.Rubrica">
+    tools:context="polastri.alessandro.agendapersonale.polastri.alessandro.agendapersonale.rubrica.Rubrica">
 
     <TableLayout
         android:id="@+id/tableLayout"
