--- a/app/src/main/res/layout/activity_rubrica.xml
+++ b/app/src/main/res/layout/activity_rubrica.xml
@@ -23,14 +23,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/aggiungi"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lista" />
+        app:layout_constraintTop_toBottomOf="@+id/lista"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginRight="8dp" />
 
     <SearchView
         android:id="@+id/ricerca"
