--- a/app/src/main/res/layout/activity_rubrica.xml
+++ b/app/src/main/res/layout/activity_rubrica.xml
@@ -23,16 +23,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="160dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorPrimary"
+        android:backgroundTint="@color/colorPrimary"
         android:text="@string/aggiungi"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lista"
         app:layout_constraintVertical_bias="0.0"
-        android:layout_marginRight="8dp" />
+        tools:targetApi="lollipop"
+        android:layout_marginRight="160dp" />
 
     <SearchView
         android:id="@+id/ricerca"
