--- a/app/src/main/res/layout/riga_layout_rubrica.xml
+++ b/app/src/main/res/layout/riga_layout_rubrica.xml
@@ -65,4 +65,15 @@
         app:layout_constraintTop_toBottomOf="@+id/telefono"
         android:layout_marginLeft="10dp" />
 
+    <TextView
+        android:id="@+id/tipo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:textColor="@android:color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email"
+        android:layout_marginLeft="10dp" />
+
 </android.support.constraint.ConstraintLayout>
