--- a/app/src/main/res/layout/activity_rubrica.xml
+++ b/app/src/main/res/layout/activity_rubrica.xml
@@ -7,7 +7,7 @@
     tools:context="polastri.alessandro.agendapersonale.polastri.alessandro.agendapersonale.rubrica.Rubrica">
 
     <ListView
-        android:id="@+id/lista"
+        android:id="@+id/listaContatti"
         android:layout_width="395dp"
         android:layout_height="475dp"
         android:layout_marginEnd="8dp"
@@ -16,10 +16,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ricerca" />
+        app:layout_constraintTop_toBottomOf="@+id/ricercaTipo" />
 
     <Button
-        android:id="@+id/aggiungi"
+        android:id="@+id/aggiungiContatto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -30,13 +30,13 @@
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lista"
+        app:layout_constraintTop_toBottomOf="@+id/listaContatti"
         app:layout_constraintVertical_bias="0.0"
         tools:targetApi="lollipop"
         android:layout_marginRight="160dp" />
 
     <SearchView
-        android:id="@+id/ricerca"
+        android:id="@+id/ricercaTipo"
         android:layout_width="384dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
