--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,12 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="24dp"
         android:backgroundTint="@color/colorPrimary"
-        android:onClick="rubrica"
+        android:onClick="apriRubrica"
         android:text="@string/rubrica"
         android:textColor="@android:color/background_light"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendario" tools:targetApi="lollipop"
+        app:layout_constraintTop_toBottomOf="@+id/calendario"
+        tools:targetApi="lollipop"
         android:layout_marginLeft="28dp" />
 
     <CalendarView
@@ -62,5 +63,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/attivitaInCorso"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="28dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:onClick="apriAttivita"
+        android:text="@string/attivit_in_corso"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendario"
+        tools:targetApi="lollipop"
+        android:layout_marginRight="28dp" />
 
 </android.support.constraint.ConstraintLayout>
