--- a/app/src/main/res/layout/activity_attivita_in_corso.xml
+++ b/app/src/main/res/layout/activity_attivita_in_corso.xml
@@ -13,7 +13,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
