--- a/app/src/main/res/layout/layout_dialog_rubrica.xml
+++ b/app/src/main/res/layout/layout_dialog_rubrica.xml
@@ -35,7 +35,8 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="@string/mario"
-                android:inputType="textCapWords" />
+                android:inputType="textCapWords"
+                android:textAlignment="center" />
         </TableRow>
 
         <TableRow
@@ -56,7 +57,8 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="@string/rossi"
-                android:inputType="textCapWords" />
+                android:inputType="textCapWords"
+                android:textAlignment="center" />
         </TableRow>
 
         <TableRow
@@ -77,7 +79,8 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="@string/_1122334455"
-                android:inputType="phone" />
+                android:inputType="phone"
+                android:textAlignment="center" />
         </TableRow>
 
         <TableRow
@@ -98,7 +101,8 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="@string/mario_example_com"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:textAlignment="center" />
         </TableRow>
 
         <TableRow
@@ -142,6 +146,7 @@
                 android:ems="10"
                 android:hint="@string/tipo_personalizzato"
                 android:inputType="textCapWords"
+                android:textAlignment="center"
                 tools:layout_editor_absoluteX="0dp"
                 tools:layout_editor_absoluteY="57dp" />
 
