Aggiunto l'algoritmo per la priorità automatica e la data automatica.

--- a/app/src/main/res/layout/riga_layout_attivita.xml
+++ b/app/src/main/res/layout/riga_layout_attivita.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -53,5 +54,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_delete"
         android:layout_marginRight="16dp" />
+
+    <TextView
+        android:id="@+id/priorita_temp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="96dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toStartOf="@+id/cancella_attivitaincorso"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="96dp" />
+
+    <TextView
+        android:id="@+id/dataTemp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="168dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="168dp" />
 
 </android.support.constraint.ConstraintLayout>
