--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,4 +79,20 @@
         tools:targetApi="lollipop"
         android:layout_marginRight="28dp" />
 
+    <Button
+        android:id="@+id/bottoneImpegni"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:onClick="apriImpegni"
+        android:text="@string/impegni"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/attivitaInCorso"
+        tools:targetApi="lollipop" />
+
 </android.support.constraint.ConstraintLayout>
