Aggiunto database e codice di impegni in corso, ma mancano tutti i controlli degli input e l'algoritmo degli impegni

--- a/app/src/main/res/layout/activity_impegni_in_corso.xml
+++ b/app/src/main/res/layout/activity_impegni_in_corso.xml
@@ -1,8 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="polastri.alessandro.agendapersonale.polastri.alessandro.agendapersonale.impegni.ImpegniInCorso">
 
+    <ListView
+        android:id="@+id/lista_impegni"
+        android:layout_width="395dp"
+        android:layout_height="481dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ricerca_tipo_impegno" />
+
+    <SearchView
+        android:id="@+id/ricerca_tipo_impegno"
+        android:layout_width="395dp"
+        android:layout_height="47dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@android:color/transparent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" tools:targetApi="lollipop" />
+
+    <Button
+        android:id="@+id/aggiungi_impegno"
+        android:layout_width="195dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="100dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="@string/aggiungi_impegno"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lista_impegni" tools:targetApi="lollipop" />
 </android.support.constraint.ConstraintLayout>
