--- a/app/src/main/res/layout/activity_rubrica.xml
+++ b/app/src/main/res/layout/activity_rubrica.xml
@@ -42,7 +42,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@android:color/darker_gray"
+        android:background="@android:color/transparent"
         android:inputType="none|text"
         android:queryHint='Ricerca per tipo: Es: "amico"'
         app:layout_constraintEnd_toEndOf="parent"
