--- a/app/src/main/res/layout/riga_layout_attivita.xml
+++ b/app/src/main/res/layout/riga_layout_attivita.xml
@@ -44,15 +44,16 @@
 
     <ImageButton
         android:id="@+id/cancella_attivitaincorso"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/todo"
         android:tint="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_delete"
+        app:srcCompat="@android:drawable/ic_delete" tools:targetApi="lollipop"
         android:layout_marginRight="16dp" />
 
 </android.support.constraint.ConstraintLayout>
