--- a/app/src/main/res/layout/riga_layout_rubrica.xml
+++ b/app/src/main/res/layout/riga_layout_rubrica.xml
@@ -35,17 +35,15 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/todo"
         android:tint="@color/colorAccent"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.965"
-        app:layout_constraintStart_toEndOf="@+id/telefono"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_delete" />
+        app:srcCompat="@android:drawable/ic_delete" tools:targetApi="lollipop"
+        android:layout_marginRight="16dp" />
 
     <TextView
         android:id="@+id/telefono"
